--- a/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -434,6 +434,9 @@
     <ClInclude Include="..\..\core\include\geom\mgpath.h">
       <Filter>Header Files\geom</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\core\include\shape\mgbasicsps.h">
+      <Filter>Header Files\shape</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\core\src\shapedoc\mglayer.cpp">
@@ -628,9 +631,6 @@
     <ClCompile Include="..\..\core\src\gshape\mgsplines.cpp">
       <Filter>Source Files\gshape</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\core\src\gshape\nanosvg.cpp">
-      <Filter>Source Files\gshape</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\core\src\shape\mgbasicspreg.cpp">
       <Filter>Source Files\shape</Filter>
     </ClCompile>
@@ -647,6 +647,9 @@
       <Filter>Source Files\shape</Filter>
     </ClCompile>
     <ClCompile Include="..\..\core\src\geom\mgpath.cpp">
+      <Filter>Source Files\geom</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\core\src\geom\nanosvg.cpp">
       <Filter>Source Files\geom</Filter>
     </ClCompile>
   </ItemGroup>
