--- a/core/src/cmdbase/Makefile
+++ b/core/src/cmdbase/Makefile
@@ -10,6 +10,7 @@ CPPFLAGS    += -Wall \
                -I$(ROOTDIR)/core/include/graph \
                -I$(ROOTDIR)/core/include/gshape \
                -I$(ROOTDIR)/core/include/shape \
+               -I$(ROOTDIR)/core/include/storage \
                -I$(ROOTDIR)/core/include/cmd \
                -I$(ROOTDIR)/core/include/cmdbase \
                -I$(ROOTDIR)/core/include/cmdobserver
