--- a/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
+++ b/win/TouchVGCore/TouchVGCore_vc10.vcxproj.filters
@@ -236,7 +236,7 @@
     <ClInclude Include="..\..\core\include\cmdbasic\mgdrawgrid.h">
       <Filter>Header Files\cmdbasic</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\core\include\cmdbasic\mgdrawline.h">
+    <ClInclude Include="..\..\core\include\cmdbase\mgdrawline.h">
       <Filter>Header Files\cmdbasic</Filter>
     </ClInclude>
     <ClInclude Include="..\..\core\include\cmdbasic\mgdrawlines.h">
@@ -529,7 +529,7 @@
     <ClCompile Include="..\..\core\src\cmdbasic\mgdrawgrid.cpp">
       <Filter>Source Files\cmdbasic</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\core\src\cmdbasic\mgdrawline.cpp">
+    <ClCompile Include="..\..\core\src\cmdbase\mgdrawline.cpp">
       <Filter>Source Files\cmdbasic</Filter>
     </ClCompile>
     <ClCompile Include="..\..\core\src\cmdbasic\mgdrawlines.cpp">
