--- a/win/TouchVGCore/TouchVGCore_vc9.vcproj
+++ b/win/TouchVGCore/TouchVGCore_vc9.vcproj
@@ -544,6 +544,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\core\src\gshape\mgarccross.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\core\src\gshape\mgcshapes.cpp"
 					>
 				</File>
